feat(tutorial): continued k8s container tuto

--- a/tutorials/get-started-containers-docker/index.mdx
+++ b/tutorials/get-started-containers-docker/index.mdx
@@ -131,6 +131,130 @@ We start by creating an extremely simple, one-line Python application that print
     nano myapp.py
     ```
 
+3. Write the following line of code inside the file, then save and exit:
+
+  ```python
+  print("Hello World")
+  ```
+
+4. Create the Dockerfile. This is a text file which gives instructions for building the Docker image for the application. Create it in the same directory as `myapp.py` with the following command
+
+  ```bash
+  nano Dockerfile
+  ```
+
+5. Copy and paste the following code into the Dockerfile, then save and exit:
+
+  ```
+  FROM python:3
+  ADD myapp.py /
+  CMD ["python", "./myapp.py"]
+  ```
+
+  * **FROM**: this instruction specifies the base image for the container. In our case, we take care of our python requirement.
+  * **ADD**: this instruction adds files from our local machine (`myapp.py`) to the container image.
+  * **CMD**: this instruction contains the command to be executed by default when the container is launched. In this case, we tell it to use python to run the `myapp.py` application.
+
+6. Run the following command to build a Docker image for the application, using the Dockerfile just created:
+
+  ```
+  sudo docker build -t mytestapp .
+  ```
+
+  The `-t mytestapp` argument tells Docker to **tag** the image with the name **mytestapp. The `.` at the end of the command tells Docker to use the current directory as build context.
+
+7. Run the following command to run the image. This tells Docker to instanciate and execute the image, launching a container instance of our application:
+
+  ```
+  sudo docker run mytestapp
+  ```
+
+  As the image instantiates and runs, you should see `Hello World` printed to your command line. Thanks to Docker, the application runs from within the container, regardless of whether any given ues who runs the image has python installed on their machine or not.
+
 ### Example 2 - a more complex app
 
+In this example, we look at a pre-built application called **whoami**, an HTTP service that prints its own Docker container ID. The application is hosted on a public github repository: [https://github.com/jwilder/whoami](https://github.com/jwilder/whoami). 
+
+1. Take a look at the files in the repository to familiarise yourself with the application, particularly the [Dockerfile](https://github.com/jwilder/whoami/blob/master/Dockerfile). You will notice that this Dockerfile introduces some new commands, including:
+
+  - `WORKDIR` to define the working directory of the Docker container
+  - `RUN` to specify a command to be executed inside the Docker container
+  - `ENV` to set an environment variable
+  - `EXPOSE` to tell the container to listen on a specified network port during its runtime
+  - `COPY`, which is similar to `ADD` and copies files to the Docker image.
+
+  Return to the terminal of your local machine for the next steps.
+
+2. Clone the **whoami** project to your local machine:
+
+  ```bash
+  git clone https://github.com/jwilder/whoami.git
+  ```
+
+3. Navigate into the `whoami` directory that has been created:
+
+  ```bash
+  cd whoami
+  ```
+
+4. Build the Docker image for the application:
+
+  ```bash
+  sudo docker build -t testwhoami .
+  ```
+
+5. Run the container image with the following command. Note that the `-d` argument tells Docker to run the contianer in the background (**d**etached mode), and the `-p` argument exposes the necessary ports for the application:
+
+  ```bash
+  sudo docker run -d -p 8000:8000 -t testwhoami
+  ```
+
+6. Carry out the following command to show all the Docker processes currently running:
+
+  ```bash
+  sudo docker ps 
+  ```
+
+  You should see the `testwhoami` image in the output, showing that the container is running.
+
+7. Open up a browser and go to the application's endpoint, which is the IP address of your local machine with the port 8000:
+
+  ```
+  http://<your-ip-address>:8000
+  ```
+
+  <Message type="tip">
+
+    If you don't know your local IP address, use the following command to find out:
+
+    ```
+    hostname --all-ip-addresses | awk '{print $1}'
+    ```
+
+  </Message>
+
+  You should see that the container image is printing out its container ID at the endpoint, with an output similar to the following:
+
+  ```
+  I'm 41ed60d6177a
+  ```
+
+  The container ID should match that which you saw with the `docker ps` command.  
+
+8. Run the following command in your terminal to shut down the container. Replace <container-ID> with the ID for your container.
+
+  ```
+  sudo docker kill <container-ID>
+  ```
+
+9. Run `sudo docker ps` and/or refresh the endpoint in your browser, to show that the container is no longer running.
+
 ## Pushing to the Scaleway Container Registry
+
+To finish, we push the Docker images we have created to a container registry. Container registries are designed to store container images, and make them accessible to those who need them. There are many different container registry platforms, but here we use the [Scaleway Container Registry](https://www.scaleway.com/en/container-registry/).
+
+1. Open a browser and go to the [Scaleway console's Container Registry page](https://console.scaleway.com/registry/namespaces).
+
+2. Follow [these instructions](https://www.scaleway.com/en/docs/compute/container-registry/how-to/create-namespace/) to create a namespace. Make sure that you set your privacy policy to **private**.
+
+3. Follow the steps of the creation wizard to create your namespace.() 
