feat(tutorials): added k8s containers tutorial MTA-1827

--- a/tutorials/get-started-containers-docker/index.mdx
+++ b/tutorials/get-started-containers-docker/index.mdx
@@ -42,10 +42,12 @@ There are many advantages to building and deploying applications in this way. He
 - **Portability**: Containerized applications can be run on any cloud, platform or machine.
 - **Efficiency**: Containerization uses fewer resources than Virtual Machines.
 - **Agility**: With containerization, development and delivery is faster, more agile and more flexible.
-- **Scalability**: Kubernetes is ideal for quickly scaling your application deploymet up or down adding and removing containers depending on the need.
+- **Scalability**: Kubernetes is ideal for quickly scaling your application deployment up or down adding and removing containers depending on the need.
 - **Reliability**: Kubernetes keeps containerized workloads up and running at all times
 And encompassing all of the above...
 - **Cloud Native**: Building apps for Kubernetes mean embracing Cloud-native design: the building and running of scalable applications in modern, dynamic Cloud environments.
+
+To learn more about containers, Docker and Kubernetes, check out the [useful links](#useful-links) at the end of this tutorial.
 
 ## Installing Docker
 
@@ -117,8 +119,6 @@ We show two examples of making containerized applications with Docker and take y
 
 We start by creating an extremely simple, one-line Python application that prints "Hello World" to the command line, then show how to use Docker to containerize this application.
 
-#### Making the application
-
 1. Create a folder called `myfirstapp` and navigate into it:
 
     ```bash
@@ -151,9 +151,9 @@ We start by creating an extremely simple, one-line Python application that print
   CMD ["python", "./myapp.py"]
   ```
 
-  * **FROM**: this instruction specifies the base image for the container. In our case, we take care of our python requirement.
-  * **ADD**: this instruction adds files from our local machine (`myapp.py`) to the container image.
-  * **CMD**: this instruction contains the command to be executed by default when the container is launched. In this case, we tell it to use python to run the `myapp.py` application.
+    * **FROM**: this instruction specifies the base image for the container. In our case, we take care of our python requirement.
+    * **ADD**: this instruction adds files from our local machine (`myapp.py`) to the container image.
+    * **CMD**: this instruction contains the command to be executed by default when the container is launched. In this case, we tell it to use python to run the `myapp.py` application.
 
 6. Run the following command to build a Docker image for the application, using the Dockerfile just created:
 
@@ -177,11 +177,11 @@ In this example, we look at a pre-built application called **whoami**, an HTTP s
 
 1. Take a look at the files in the repository to familiarise yourself with the application, particularly the [Dockerfile](https://github.com/jwilder/whoami/blob/master/Dockerfile). You will notice that this Dockerfile introduces some new commands, including:
 
-  - `WORKDIR` to define the working directory of the Docker container
-  - `RUN` to specify a command to be executed inside the Docker container
-  - `ENV` to set an environment variable
-  - `EXPOSE` to tell the container to listen on a specified network port during its runtime
-  - `COPY`, which is similar to `ADD` and copies files to the Docker image.
+    - `WORKDIR` to define the working directory of the Docker container
+    - `RUN` to specify a command to be executed inside the Docker container
+    - `ENV` to set an environment variable
+    - `EXPOSE` to tell the container to listen on a specified network port during its runtime
+    - `COPY`, which is similar to `ADD` and copies files to the Docker image.
 
   Return to the terminal of your local machine for the next steps.
 
@@ -241,7 +241,7 @@ In this example, we look at a pre-built application called **whoami**, an HTTP s
 
   The container ID should match that which you saw with the `docker ps` command.  
 
-8. Run the following command in your terminal to shut down the container. Replace <container-ID> with the ID for your container.
+8. Run the following command in your terminal to shut down the container. Replace `<container-ID>` with the ID for your container.
 
   ```
   sudo docker kill <container-ID>
@@ -257,4 +257,47 @@ To finish, we push the Docker images we have created to a container registry. Co
 
 2. Follow [these instructions](https://www.scaleway.com/en/docs/compute/container-registry/how-to/create-namespace/) to create a namespace. Make sure that you set your privacy policy to **private**.
 
-3. Follow the steps of the creation wizard to create your namespace.() 
+  The following steps should be carried out in the terminal of your local machine:
+
+3. Log in to your Container Registry namespace:
+
+  ```bash
+  sudo docker login <address-of-your-namespace> -u nologin -p $SCW_SECRET_TOKEN
+  ```
+
+  <Message type="tip">
+
+  Ensure that you replace `<address-of-your-namespace>` with the address of your own Container Registry namespace (eg `rg.fr-par.scw.cloud/mynamespace`) and that you have [created your API key](https://www.scaleway.com/en/docs/console/my-project/how-to/generate-api-key/) and that you have saved the secret part of your API key as an environment variable e.g. with the command `export SCW_SECRET_TOKEN=a4db08b7-5723-4ba9-8c18-f2de493465a2`
+
+  </Message>
+
+4. Tag the image you want to push with the address of your Container Registry namespace:
+
+  ```bash
+  sudo docker tag mytestapp <address-of-your-namespace>/mytestapp
+  ```
+
+5. Push the tagged image to the Container Registry namespace:
+
+  ```bash
+  sudo docker push <address-of-your-namespace>/mytestapp
+  ```
+
+6. Refresh your Container Registry namespace in the browser to ensure your image has been successfuly pushed.
+
+## Conclusion
+
+You have seen how to containerize an application by creating a Dockerfile, using the Dockerfile to build a Docker image, and then running the containerized application from the image. As well as this, you can then push the image to a container registry, so that it can be pulled by other users who want to run the application. Future tutorials in this series will show you how to create a Kubernetes Kapsule in the Scaleway console, and use that to deploy your containerized application at scale. We'll then go on to cover more advanced topics such as load balancing your application and managing its storage. Don't hesitate to check out some of the links below in the meantime!
+
+## Useful links
+
+- [Getting started with Kubernetes: Part 1 - Containers & Docker [VIDEO TUTORIAL]](TODO LINK)
+- [Kubernetes Concepts](https://www.scaleway.com/en/docs/compute/kubernetes/concepts/)
+- [Introduction to Kubernetes](https://www.scaleway.com/en/docs/compute/kubernetes/reference-content/introduction-to-kubernetes/)
+- [What is a container? [Docker documentation]](https://www.docker.com/resources/what-container)
+- [What is a container? [VMware video]](https://www.youtube.com/watch?v=EnJ7qX9fkcU&t=185s)
+- [Containerization Explained [IBM video]](https://www.youtube.com/watch?v=0qotVMX-J5s)
+- [Understanding Docker & Kubernetes Visually [Aurelie Vache videos, FR]](https://www.youtube.com/c/AurelieVache/videos)
+- [Official Docker documentation](https://docs.docker.com/get-started/overview/)
+- [Docker Cheat Sheet](https://www.docker.com/sites/default/files/d8/2019-09/docker-cheat-sheet.pdfwhat)
+- [Scaleway Container Registry documentation](https://www.scaleway.com/en/docs/compute/container-registry/)
