feat(databases): add permissions how-to page RDB-1676

--- a/storage/database/how-to/add-users.mdx
+++ b/storage/database/how-to/add-users.mdx
@@ -54,5 +54,5 @@ To update the password, the permissions or delete the user, click <Icon name="mo
 
 <Navigation title="See Also">
   <PreviousButton to="/storage/database/how-to/create-a-database/">How to create a Managed Database</PreviousButton>
-  <NextButton to="/storage/database/how-to/manage-allowed-ip-addresses/">How to manage allowed IPs</NextButton>
+  <NextButton to="/storage/database/how-to/manage-permissions/">How to manage user permissions</NextButton>
 </Navigation>
