--- a/storage/database/how-to/manage-allowed-ip-addresses.mdx
+++ b/storage/database/how-to/manage-allowed-ip-addresses.mdx
@@ -44,6 +44,6 @@ Allowed IPs define remote access restrictions for your Database Instance. The de
 3. Click **Delete your IP**.
 
 <Navigation title="See Also">
-  <PreviousButton to="/storage/database/how-to/add-users/">How to add users</PreviousButton>
+  <PreviousButton to="/storage/database/how-to/manage-permissions/">How to manage user permissions</PreviousButton>
   <NextButton to="/storage/database/how-to/change-volume-type/">How to change volume type</NextButton>
 </Navigation>
